src/main/metadata/objects/Insights_Question__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Picklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
		<description>Lookup to Insight Question itself.Only to identify the controlling picklist and should only be entered for a dependent picklist record.</description>
        <label>Controlling Picklist</label>
        <referenceTo>Insights_Question__c</referenceTo>
        <relationshipName>Insight_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_System_Reference__c</fullName>
        <label>External System Reference</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Type__c</fullName>
		<description>Type of insight for categorization</description>
        <label>Input Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Controlling Picklist</fullName>
                </value>
                <value>
                    <fullName>Dependent Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Multi-select Picklist</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>RadioButton</fullName>
                </value>
                <value>
                    <fullName>Prepopulate</fullName>
                </value>
                <value>
                    <fullName>Read-Only</fullName>
                </value>
                <value>
                    <fullName>Formatted Text</fullName>
                    <isActive>false</isActive>
                    <label>Formatted Text</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insight_Answer_Choices__c</fullName>
        <description>Possible Answer Values with choices separated by pipe (|)</description>
        <label>Insight Answer Choices</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>	
    <fields>
        <fullName>Insight_Status__c</fullName>
        <defaultValue>false</defaultValue>
		<description>Status determines usage in Lightning components</description>		
        <label>Insight Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insights_Question_Context__c</fullName>
		<description>Text field to describe Headersto group questions</description>	
        <label>Insights Question Context</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insights_Question_Id__c</fullName>
        <displayFormat>INQ-{000000}</displayFormat>
		<description>SFDC autogenerated ID</description>	
        <label>Insights Question Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Insights_Question_Text__c</fullName>
		<description>Actual question to be displayed on Insight</description>	
        <label>Insights Question Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insights_Type__c</fullName>
		<description>Type of insight for categorization</description>	
        <label>Insights Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Life Style</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
               <value>
                    <fullName>Vehicle-Generic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'NZ') ,'NZ',
IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP', 
IF(ISPICKVAL($User.Market__c, 'TH'), 'TH', 
IF(ISPICKVAL($User.Market__c, 'MY'), 'MY', 
IF(ISPICKVAL($User.Market__c, 'IN'), 'IN',
IF(ISPICKVAL($User.Market__c, 'KR'), 'KR',
IF(ISPICKVAL($User.Market__c, 'TR'), 'TR','')))))))))</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
		<description>Order of questions. This will also ensure that a controlling and dependent picklist questions are grouped together</description>	
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Insights Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insights Questions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>